--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
       context: ./containers/nginx
     ports:
       - 80:80
+    volumes:
+      - ./containers/nginx:/etc/nginx/conf.d
+    restart: always
+    depend_on:
+      - client
 
   client:
     build:
@@ -13,9 +18,11 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./containers/client:/usr/src/examin/client
+      - ./containers/client:/usr/src/examin/client:cached
     tty: true
     stdin_open: true
+    environment:
+      BASE_URL: http://api:3000
     command: yarn start -p 3000 -b '0.0.0.0'
     depend_on:
       - api
@@ -26,7 +33,7 @@ services:
     ports:
       - 3500:3000
     volumes:
-      - ./containers/api:/usr/src/examin/api
+      - ./containers/api:/usr/src/examin/api:cached
     tty: true
     stdin_open: true
     environment:
