--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./containers/nginx:/etc/nginx/conf.d
     restart: always
-    depend_on:
+    depends_on:
       - client
 
   client:
@@ -24,7 +24,7 @@ services:
     environment:
       BASE_URL: http://api:3000
     command: yarn start -p 3000 -b '0.0.0.0'
-    depend_on:
+    depends_on:
       - api
 
   api:
@@ -39,7 +39,7 @@ services:
     environment:
       RAILS_ENV: production
     command: bundle exec rails server -p 3000 -b '0.0.0.0'
-    depend_on:
+    depends_on:
       - db
 
   db:
