client のパスの編集

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   client:
     build:
-      context: ./containers/client
+      context: ./containers/client/docker
     ports:
       - 3000:3000
     volumes:
