--- a/containers/nginx/default.conf
+++ b/containers/nginx/default.conf
@@ -1,14 +1,38 @@
-user nginx;
+map $sent_http_content_type $expires {
+  "text/html"                 epoch;
+  "text/html; charset=utf-8"  epoch;
+  default                     off;
+}
 
 server {
-  listen  80;
-  server_name localhost;
-  charset utf-8;
+  listen          80;             # nginx が見るポート番号
+  server_name     _;    # ドメインはここで設定してください
 
-  location /examin/ {
-    proxy_pass http://client:3000/; 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  gzip            on;
+  gzip_types      text/plain application/xml text/css application/javascript;
+  gzip_min_length 1000;
+
+  location / {
+    expires $expires;
+
+    proxy_redirect                      off;
+    proxy_set_header Host               $host;
+    proxy_set_header X-Real-IP          $remote_addr;
+    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_read_timeout          1m;
+    proxy_connect_timeout       1m;
+    proxy_pass                          http://client:3000;
+  }
+
+  location /api {
+    proxy_redirect                      off;
+    proxy_set_header Host               $host;
+    proxy_set_header X-Real-IP          $remote_addr;
+    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_read_timeout          1m;
+    proxy_connect_timeout       1m;
+    proxy_pass                          http://api:3000;
   }
 }
