--- a/containers/nginx/default.conf
+++ b/containers/nginx/default.conf
@@ -5,13 +5,14 @@ map $sent_http_content_type $expires {
 }
 
 server {
-  listen          80;             # nginx が見るポート番号
-  server_name     _;    # ドメインはここで設定してください
+  listen          80;
+  server_name     _;
 
   gzip            on;
   gzip_types      text/plain application/xml text/css application/javascript;
   gzip_min_length 1000;
 
+  # client の設定
   location / {
     expires $expires;
 
@@ -25,6 +26,7 @@ server {
     proxy_pass                          http://client:3000;
   }
 
+  # api の設定
   location /api {
     proxy_redirect                      off;
     proxy_set_header Host               $host;
