--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,34 +11,28 @@ services:
     restart: always
     depends_on:
       - client
+      - api
 
   client:
     build:
       context: ./containers/client
     ports:
       - ${CLIENT_PORT}:3000
-    volumes:
-      - ./containers/client:/usr/src/examin/client:cached
     env_file:
       - ./env/client.env
-    tty: true
-    stdin_open: true
-    command: yarn start -p 3000 -b '0.0.0.0'
+    restart: always
     depends_on:
       - api
 
   api:
     build:
       context: ./containers/api
+      dockerfile: Dockerfile_production
     ports:
       - ${API_PORT}:3000
-    volumes:
-      - ./containers/api:/usr/src/examin/api:cached
-    tty: true
-    stdin_open: true
     env_file:
       - ./env/api.env
-    command: bundle exec rails server -p 3000 -b '0.0.0.0'
+    restart: always
     depends_on:
       - db
 
