--- a/containers/nginx/default.conf
+++ b/containers/nginx/default.conf
@@ -1,9 +1,3 @@
-map $sent_http_content_type $expires {
-  "text/html"                 epoch;
-  "text/html; charset=utf-8"  epoch;
-  default                     off;
-}
-
 server {
   listen          80;
   server_name     _;
@@ -14,27 +8,44 @@ server {
 
   # client の設定
   location / {
-    expires $expires;
-
-    proxy_redirect                      off;
-    proxy_set_header Host               $host;
-    proxy_set_header X-Real-IP          $remote_addr;
-    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto  $scheme;
-    proxy_read_timeout          1m;
-    proxy_connect_timeout       1m;
-    proxy_pass                          http://client:3000;
+    proxy_redirect                     off;
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_read_timeout                 1m;
+    proxy_connect_timeout              1m;
+    proxy_pass                         http://frontend;
   }
+
+  # client の設定が出来次第以下に変更
+  # location /examin {
+  # rewrite /examin/(.+) $1 break;
+  # proxy_pass http://frontend/$1;
 
   # api の設定
   location /api {
-    proxy_redirect                      off;
-    proxy_set_header Host               $host;
-    proxy_set_header X-Real-IP          $remote_addr;
-    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto  $scheme;
-    proxy_read_timeout          1m;
-    proxy_connect_timeout       1m;
-    proxy_pass                          http://api:3000;
+    proxy_redirect                     off;
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_read_timeout                 1m;
+    proxy_connect_timeout              1m;
+    proxy_pass                         http://backend;
   }
+
+  # client の設定が出来次第以下に変更
+  # location /examin/api {
+  # rewrite /examin/api/(.+) api/$1 break;
+  # proxy_pass http://backend/$1;
 }
+
+upstream frontend {
+  server client:3000;
+}
+
+upstream backend {
+  server api:3000;
+}
+
