--- a/containers/nginx/default.conf
+++ b/containers/nginx/default.conf
@@ -1,51 +1,95 @@
-server {
-  listen          80;
-  server_name     _;
+user examin;
+worker_proccess auto;
 
-  gzip            on;
-  gzip_types      text/plain application/xml text/css application/javascript;
-  gzip_min_length 1000;
+error_log /var/log/nginx/error.log;
+pid       /var/run/nginx.pid;
 
-  # client の設定
-  location / {
-    proxy_redirect                     off;
-    proxy_set_header Host              $host;
-    proxy_set_header X-Real-IP         $remote_addr;
-    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_read_timeout                 1m;
-    proxy_connect_timeout              1m;
-    proxy_pass                         http://frontend;
+events {
+  worker_connections 1024;
+}
+
+http {
+  # ログフォーマットを指定
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                  '$status $body_byte_sent "$http_referer" '
+                  '"$http_user_agent" "$http_x_forwarded_for" ';
+
+  # ログ出力先を設定
+  access_log logs/access.log main;
+  error_log  logs/error.log;
+
+  # パフォーマンスに関する設定
+  keepalive_timeout 60s;
+  sendfile          on;
+  tcp_nopush        on;
+
+  upstream frontend {
+    server client:3000;
   }
 
-  # client の設定が出来次第以下に変更
-  # location /examin {
-  # rewrite /examin/(.+) $1 break;
-  # proxy_pass http://frontend/$1;
-
-  # api の設定
-  location /api {
-    proxy_redirect                     off;
-    proxy_set_header Host              $host;
-    proxy_set_header X-Real-IP         $remote_addr;
-    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_read_timeout                 1m;
-    proxy_connect_timeout              1m;
-    proxy_pass                         http://backend;
+  upstream backend {
+    server api:3000;
   }
 
-  # client の設定が出来次第以下に変更
-  # location /examin/api {
-  # rewrite /examin/api/(.+) api/$1 break;
-  # proxy_pass http://backend/$1;
-}
+  server {
+    listen      80;
+    server_name _;
 
-upstream frontend {
-  server client:3000;
-}
+    # gzipディレクティブによる圧縮の設定
+    gzip            on;
+    gzip_types      text/plain text/css
+                    application/xml application/javascript;
+    gzip_min_length 1000;
 
-upstream backend {
-  server api:3000;
-}
+    # リクエストボディのバッファリングに関する設定
+    client_max_body_size    8m;
+    client_body_buffer_size 16k;
+    client_body_temp_path   /dev/shm/nginx_client_body_temp;
 
+    # レスポンスのバッファリングに関する設定
+    proxy_buffers            64 16k;
+    proxy_max_temp_file_size 1024m;
+    proxy_temp_path          /dev/shm/nginx_proxt_temp;
+
+    # タイムアウトに関する設定
+    proxy_connect_timeout 10s;
+    proxy_read_timeout    20s;
+    proxt_send_timeout    20s;
+  
+    # client の設定
+    location / {
+      proxy_redirect off;
+
+      proxy_set_header Host              $host;
+      proxy_set_header X-Real-IP         $remote_addr;
+      proxy_set_header X-Forwarded-Host  $host;
+      proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      proxy_pass http://frontend;
+    }
+  
+    # client の設定が出来次第以下に変更
+    # location /examin {
+    # rewrite /examin/(.+) $1 break;
+    # proxy_pass http://frontend/$1;
+  
+    # api の設定
+    location /api {
+      proxy_redirect off;
+
+      proxy_set_header Host              $host;
+      proxy_set_header X-Real-IP         $remote_addr;
+      proxy_set_header X-Forwarded-Host  $host;
+      proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      proxy_pass http://backend;
+    }
+  
+    # client の設定が出来次第以下に変更
+    # location /examin/api {
+    # rewrite /examin/api/(.+) api/$1 break;
+    # proxy_pass http://backend/$1;
+  }
+}
