--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,5 +1,5 @@
-user examin;
-worker_proccess auto;
+user  nginx;
+worker_processes auto;
 
 error_log /var/log/nginx/error.log;
 pid       /var/run/nginx.pid;
@@ -11,12 +11,12 @@ events {
 http {
   # ログフォーマットを指定
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                  '$status $body_byte_sent "$http_referer" '
+                  '$status $body_bytes_sent "$http_referer" '
                   '"$http_user_agent" "$http_x_forwarded_for" ';
 
   # ログ出力先を設定
-  access_log logs/access.log main;
-  error_log  logs/error.log;
+  access_log /var/log/nginx/http_access.log main;
+  error_log  /var/log/nginx/http_error.log;
 
   # パフォーマンスに関する設定
   keepalive_timeout 60s;
@@ -54,8 +54,8 @@ http {
     # タイムアウトに関する設定
     proxy_connect_timeout 10s;
     proxy_read_timeout    20s;
-    proxt_send_timeout    20s;
-  
+    proxy_send_timeout    20s;
+
     # client の設定
     location / {
       proxy_redirect off;
@@ -68,12 +68,12 @@ http {
 
       proxy_pass http://frontend;
     }
-  
+
     # client の設定が出来次第以下に変更
     # location /examin {
     # rewrite /examin/(.+) $1 break;
     # proxy_pass http://frontend/$1;
-  
+
     # api の設定
     location /api {
       proxy_redirect off;
@@ -83,13 +83,14 @@ http {
       proxy_set_header X-Forwarded-Host  $host;
       proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      
+
       proxy_pass http://backend;
     }
-  
+
     # client の設定が出来次第以下に変更
     # location /examin/api {
     # rewrite /examin/api/(.+) api/$1 break;
     # proxy_pass http://backend/$1;
   }
 }
+
