--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - ${HTTP_PORT}:80
     volumes:
-      - ./containers/nginx:/etc/nginx/conf.d
+      - ./containers/nginx:/etc/nginx
+      - proxy_log:/var/logs/nginx
     restart: always
     depends_on:
       - client
@@ -19,8 +20,6 @@ services:
     ports:
       - ${CLIENT_PORT}:3000
     restart: always
-    depends_on:
-      - api
 
   api:
     build:
@@ -49,4 +48,5 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: "yes"
 
 volumes:
+  proxy_log: {}
   db_data: {}
