--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - ${HTTP_PORT}:80
     volumes:
-      - ./containers/nginx:/etc/nginx/conf.d
+      - ./containers/nginx:/etc/nginx
+      - proxy_log:/var/logs/nginx
     restart: always
     depends_on:
       - client
@@ -20,13 +21,9 @@ services:
       - ${CLIENT_PORT}:3000
     volumes:
       - ./containers/client:/usr/src/examin/client:cached
-    env_file:
-      - ./env/client.env
     tty: true
     stdin_open: true
     command: yarn start -p 3000 -b '0.0.0.0'
-    depends_on:
-      - api
 
   api:
     build:
@@ -39,7 +36,7 @@ services:
     stdin_open: true
     env_file:
       - ./env/api.env
-    command: bundle exec rails server -p 3000 -b '0.0.0.0'
+    command: bundle exec rails server -p 3000 -b '0.0.0.0' -e development
     depends_on:
       - db
 
@@ -58,4 +55,5 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: "yes"
 
 volumes:
+  proxy_log: {}
   db_data: {}
