--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
   client:
     build:
       context: ./containers/client
+      dockerfile: ./docker/Dockerfile
     ports:
       - ${CLIENT_PORT}:3000
     volumes:
