--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -57,7 +57,7 @@ http {
     proxy_send_timeout    20s;
 
     # client の設定
-    location / {
+    location /examin {
       proxy_redirect off;
 
       proxy_set_header Host              $host;
@@ -69,13 +69,8 @@ http {
       proxy_pass http://frontend;
     }
 
-    # client の設定が出来次第以下に変更
-    # location /examin {
-    # rewrite /examin/(.+) $1 break;
-    # proxy_pass http://frontend/$1;
-
     # api の設定
-    location /api {
+    location /examin/api {
       proxy_redirect off;
 
       proxy_set_header Host              $host;
@@ -84,13 +79,9 @@ http {
       proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
 
+      rewrite /examin/api/(.+) /api/$1 break;
       proxy_pass http://backend;
     }
-
-    # client の設定が出来次第以下に変更
-    # location /examin/api {
-    # rewrite /examin/api/(.+) api/$1 break;
-    # proxy_pass http://backend/$1;
   }
 }
 
